# ASA-Project-1

./: 17mooshak.cpp  26a.txt  CMakeLists.txt  README.md  a.out  cleanVersion.cpp  main.cpp  notMain.cpp  test.cpp  try.txt
