cmake_minimum_required(VERSION 3.22)
project(ProjetoASA_1)

set(CMAKE_CXX_STANDARD 11)

add_executable(ProjetoASA_1
        main.cpp)

project(ProjetoASA_17mooshak)

set(CMAKE_CXX_STANDARD 11)

add_executable(ProjetoASA_17mooshak
        17mooshak.cpp)

project(ProjetoASA_cleanup)

set(CMAKE_CXX_STANDARD 11)

add_executable(ProjetoASA_cleanup
        cleanVersion.cpp)